Fixed menu toggle button z-index

--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -37,7 +37,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 13;
+  z-index: 40;
   background-color: transparent;
   padding: 1rem;
   /*font-size: 4em;*/
